src/tests/test-src/errors/E88-not-callable.syntran
// E88: not-callable
// Calling a variable that is not a function pointer

let x = 3;
x(1);
